# Bombermaaan

./: .clang-format  .gitignore  .lgtm.yml  .travis.yml  BuildRelease.py  CMakeLists.txt  LICENSE.txt  README.md  Toolchain-raspberrypi-arm.cmake  bombermaaan.sh  bugs.txt  cross-compile-env.sh  env_msvc.txt
.github/workflows/: cmake.yml
experimental/levels/: level test.TXT  level_easter.TXT
installers/: InstallScript.iss  InstallScriptWin32.iss  InstallScript_CrashRpt.iss  InstallScript_win32.iss  LinuxBuilds.txt  bombermaaan.appdata.xml  bombermaaan.desktop
openai-gym/gym-bombermaaan/: DQAgent.py  DQNetwork.py  README.md  bombermaaan.py  run.bat  setup.py  utils.py
openai-gym/gym-bombermaaan/gym_bombermaaan/: __init__.py
openai-gym/gym-bombermaaan/gym_bombermaaan/envs/: bombermaaan_env.py
openai/gym-bombermaaan/: DQAgent.py  DQNetwork.py  GAAgent.py  Logger.py  README.md  bombermaaan.py  ddqn.py  dqn.py  evaluation.py  example.py  run.bat  setup.py  utils.py
openai/gym-bombermaaan/gym_bombermaaan/: __init__.py
openai/gym-bombermaaan/gym_bombermaaan/envs/: __init__.py  bombermaaan_env.py
retropie/: bombermaaan.sh
trunk/: CMakeLists.txt  env_msvc.txt
trunk/cmake/modules/: FindAllegro4.cmake  FindCrashRpt.cmake  FindDirectX.cmake  FindSDL2_mixer.cmake
trunk/config/: config.xml
trunk/dep/: CMakeLists.txt
trunk/dep/simpleini/: ConvertUTF.h  SimpleIni.h
trunk/dep/tinyxml/: CMakeLists.txt  Makefile  tinystr.cpp  tinystr.h  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp
trunk/levels/: L001.TXT  L002.TXT  L003.TXT  L004.TXT  L005.TXT  L006.TXT  L007.TXT  L008.TXT  L009.TXT  L01.TXT  L010.TXT  L011.TXT  L012.TXT  L013.TXT  L014.TXT  L015.TXT  L016.TXT  L017.TXT  L018.TXT  L019.TXT  L02.TXT  L020.TXT  L021.TXT  L022.TXT  L023.TXT  L024.TXT  L025.TXT  L027.TXT  L028.TXT  L029.TXT  L03.TXT  L030.TXT  L031.TXT  L032.TXT  L033.TXT  L034.TXT  L035.TXT  L036.TXT  L037.TXT  L038.TXT  (+162 more)
trunk/levels/extended/: L002.TXT  L003.TXT  L004.TXT  L007.TXT  L008.TXT  L009.TXT  L010.TXT  L013.TXT  L017.TXT  L024.TXT  L027.TXT  L028.TXT  L029.TXT  L030.TXT  L034.TXT  L035.TXT  L036.TXT  L037.TXT  L038.TXT  L041.TXT  L042.TXT  L043.TXT  L044.TXT  L047.TXT  L049.TXT  L050.TXT  L051.TXT  L053.TXT  L055.TXT  L056.TXT  L057.TXT  L059.TXT  L061.TXT  L063.TXT  L066.TXT  L067.TXT  L068.TXT  L072.TXT  L074.TXT  L076.TXT  (+46 more)
trunk/net/: CMakeLists.txt  aes256.cpp  aes256.hpp  anyoption.cpp  anyoption.h  main.cpp
trunk/res/: CMakeLists.txt  GenerateHeader.py  StdAfx.cpp  StdAfx.h  res.cpp  res.h  res.rc  resource.h  resource.rc
trunk/res/image/: CheckBits.vbs  arena_arrows.xcf  arena_flame.xcf  arena_pause.xcf
trunk/res/images/: arena_fire.xcf  arena_hurry.xcf  arena_item_0-bomb.xcf  arena_item_1-flame.xcf  arena_item_7-remotecontrol.xcf  arena_item_template.xcf  drawgame_main.xcf  title_background.xcf  title_cloud_1.xcf  victory_title.xcf
trunk/res/sound/: match_music_1_normal.mod  menu_music.s3m
trunk/res/sounds/: controls_music.s3m  match_music_1_fast.mod  title_music.s3m
trunk/resgen/: CMakeLists.txt  ResGen.cpp  ResGen.h
trunk/scripts/: IncVersion.py
trunk/src/: Bombermaaan.h  Bombermaaan.rc  BombermaaanIco.h  CAiArena.cpp  CAiArena.h  CAiBomber.cpp  CAiBomber.h  CAiManager.cpp  CAiManager.h  CAllegroInput.cpp  CAllegroInput.h  CAllegroVideo.cpp  CAllegroVideo.h  CArena.cpp  CArena.h  CArenaCloser.cpp  CArenaCloser.h  CArenaSnapshot.cpp  CArenaSnapshot.h  CBoard.cpp  CBoard.h  CBomb.cpp  CBomb.h  CBomber.cpp  CBomber.h  CBomberMove.cpp  CBomberMove.h  CClock.cpp  CClock.h  CCloudManager.cpp  CCloudManager.h  CCommandChunk.cpp  CCommandChunk.h  CConsole.cpp  CConsole.h  CControls.cpp  CControls.h  CCredits.cpp  CCredits.h  CDebug.cpp  (+109 more)
trunk/tools/: convert.py
trunk/tools/BomberMaaanLevel/: BomberMaaanLevel.sln  BomberMaanLevel.sln
trunk/tools/BomberMaaanLevel/BomberMaaanLevel/: BomberMaaanLevel.csproj  FrmMain.Designer.cs  FrmMain.cs  LevelManager.cs  Program.cs  Resource1.Designer.cs  Resource1.resx
trunk/tools/BomberMaaanLevel/BomberMaaanLevel/Properties/: Resources.Designer.cs  Settings.Designer.cs
trunk/tools/BomberMaaanLevel/BomberMaanLevel/: BomberMaanLevel.csproj  FrmMain.Designer.cs  LevelManager.cs
trunk/tools/BomberMaanLevel/BomberMaanLevel/: FrmMain.cs  Program.cs
trunk/tools/BomberMaanLevel/BomberMaanLevel/Properties/: AssemblyInfo.cs  Settings.Designer.cs
trunk/tools/BombermaaanLevel/: BomberMaaanLevel.sln
trunk/tools/BombermaaanLevel/BombermaaanLevel/: BomberMaaanLevel.csproj  FrmMain.Designer.cs  FrmMain.cs  LevelManager.cs  Program.cs  Resource1.Designer.cs  Resource1.resx
trunk/tools/BombermaaanLevel/BombermaaanLevel/Properties/: Resources.Designer.cs  Settings.Designer.cs
