
PROJECT(ResGen)

SET(RESGEN_HEADERS
ResGen.h
)

SET(RESGEN_SOURCES
ResGen.cpp
)

SOURCE_GROUP("Header Files" FILES ${RESGEN_HEADERS})
SOURCE_GROUP("Source Files" FILES ${RESGEN_SOURCES})

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}/../src
)

ADD_EXECUTABLE(ResGen ${RESGEN_HEADERS} ${RESGEN_SOURCES})

#MESSAGE(${CMAKE_CURRENT_SOURCE_DIR}/../res)

#ADD_CUSTOM_COMMAND(OUTPUT ResData.c
#    COMMAND ResGen 
#    ARGS ${CMAKE_CURRENT_SOURCE_DIR}/../res
#    DEPENDS ResGen
#    WORKING_DIRECTORY ResGen
#)

ADD_LIBRARY(BomberMaaan32 SHARED ResData.c)


